--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,36 @@
   "files.associations": {
     "optional": "cpp",
     "__node_handle": "cpp",
-    "ios": "cpp"
+    "ios": "cpp",
+    "__locale": "cpp",
+    "__verbose_abort": "cpp",
+    "bitset": "cpp",
+    "cmath": "cpp",
+    "complex": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "execution": "cpp",
+    "memory": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "locale": "cpp",
+    "mutex": "cpp",
+    "new": "cpp",
+    "print": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "typeinfo": "cpp",
+    "algorithm": "cpp"
   }
 }
