--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
   "files.associations": {
-    "optional": "cpp",
-    "__node_handle": "cpp",
-    "ios": "cpp",
+    "istream": "cpp",
     "__locale": "cpp",
     "__verbose_abort": "cpp",
     "bitset": "cpp",
@@ -19,8 +17,8 @@
     "execution": "cpp",
     "memory": "cpp",
     "initializer_list": "cpp",
+    "ios": "cpp",
     "iosfwd": "cpp",
-    "istream": "cpp",
     "limits": "cpp",
     "locale": "cpp",
     "mutex": "cpp",
@@ -32,6 +30,7 @@
     "string": "cpp",
     "string_view": "cpp",
     "typeinfo": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "unordered_map": "cpp"
   }
 }
