all entities is ready(not textures)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
     "string": "cpp",
     "string_view": "cpp",
     "typeinfo": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "__bit_reference": "cpp"
   }
 }
